cmake_minimum_required(VERSION 3.27)
project(coding_test_study)

set(CMAKE_CXX_STANDARD 14)

add_executable(coding_test_study
        "2rlo/1주차/11725 트리의 부모 찾기.cpp"
        "2rlo/1주차/1918 후위표기식.cpp"
        "2rlo/1주차/2493 탑.cpp"
        "2rlo/1주차/3584 가장 가까운 공통 조상.cpp"
        "2rlo/2주차/1669 멍멍이 쓰다듬기.cpp"
        "2rlo/2주차/1188 음식 평론가.cpp"
        "2rlo/2주차/2285 우체국.cpp"
        "2rlo/2주차/8980 택배.cpp"
        "2rlo/3주차/15486 퇴사2.cpp"
        "2rlo/3주차/15961 회전 초밥.cpp"
        "2rlo/3주차/22945 팀 빌딩.cpp"
        "2rlo/3주차/14722 우유 도시.cpp"
        "2rlo/4주차/17836 공주님을 구해라!.cpp"
        "2rlo/4주차/9466 텀 프로젝트.cpp"
        "2rlo/4주차/22859 HTML 파싱.cpp")
